# react-native-static-server

./: .eslintrc  .gitignore  .gitmodules  .npmignore  .prettierrc.js  CMakeLists.txt  LICENSE.md  README.md  ReactNativeStaticServer.podspec  dr-pogodin-react-native-static-server.podspec  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  prettierrc.js  react-native-static-server.podspec  tsconfig.build.json  tsconfig.json
.circleci/: config.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml  CMakeLists.txt
android/src/main/java/com/drpogodin/reactnativestaticserver/: Errors.java  Errors.kt  InetAddressUtils.java  InetAddressUtils.kt  ReactNativeStaticServerModule.java  ReactNativeStaticServerModule.kt  ReactNativeStaticServerPackage.java  ReactNativeStaticServerPackage.kt
android/src/main/java/com/futurepress/staticserver/: Errors.java  FPStaticServerModuleImpl.java  FPStaticServerPackage.java  StaticServerModule.java
android/src/main/java/com/lighttpd/: Server.java  Server.kt
android/src/newarch/: ReactNativeStaticServerSpec.java  ReactNativeStaticServerSpec.kt
android/src/newarch/java/com/futurepress/staticserver/: FPStaticServerModule.java
android/src/oldarch/: ReactNativeStaticServerSpec.java  ReactNativeStaticServerSpec.kt
android/src/oldarch/java/com/futurepress/staticserver/: FPStaticServerModule.java
example/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/debug/java/com/reactnativestaticserverexample/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/rnstaticserver/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/reactnativestaticserverexample/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
example/android/app/src/main/java/com/rnstaticserver/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/rnstaticserver/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/rnstaticserver/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/rnstaticserver/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/java/drpogodin/reactnativestaticserver/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/reactnativestaticserverexample/: ReactNativeFlipper.java
example/android/app/src/release/java/com/rnstaticserver/: ReactNativeFlipper.java
example/assets/webroot/: index.html  script.js  style.css
example/ios/: Dummy.swift  File.swift  Podfile
example/ios/RNStaticServer/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RNStaticServer.xcodeproj/: project.pbxproj
example/ios/RNStaticServer.xcodeproj/xcshareddata/xcschemes/: RNStaticServer.xcscheme
example/ios/RNStaticServerTests/: RNStaticServerTests.m
example/ios/ReactNativeStaticServerExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeStaticServerExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeStaticServerExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeStaticServerExample.xcscheme
example/ios/ReactNativeStaticServerExample.xcworkspace/: contents.xcworkspacedata
example/ios/ReactNativeStaticServerExampleTests/: ReactNativeStaticServerExampleTests.m
example/src/: App.tsx
example/windows/: ReactNativeStaticServerExample.sln
example/windows/ReactNativeStaticServerExample/: App.cpp  App.h  App.idl  App.xaml  AutolinkedNativeModules.g.cpp  AutolinkedNativeModules.g.targets  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  PropertySheet.props  RNFSManager.cpp  ReactNativeStaticServerExample.vcxproj  ReactNativeStaticServerExample.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  packages.lock.json
ios/: Errors.h  Errors.mm  FPStaticServer.h  FPStaticServer.mm  ReactNativeStaticServer.h  ReactNativeStaticServer.mm  Server.h  Server.mm  build-native-dependencies.sh  build.sh
ios/FPStaticServer.xcodeproj/: project.pbxproj
ios/ReactNativeStaticServer/: build-native-dependencies.sh  build.sh
ios/ReactNativeStaticServer.xcodeproj/: project.pbxproj
ios/ReactNativeStaticServer/ReactNativeStaticServer.xcodeproj/: project.pbxproj
lib/module/: NativeReactNativeStaticServer.js  NativeReactNativeStaticServer.js.map  config.js  constants.js  constants.js.map  index.js  index.js.map  utils.js
lib/typescript/src/: NativeReactNativeStaticServer.d.ts  NativeReactNativeStaticServer.d.ts.map  index.d.ts
src/: Barrier.ts  Emitter.ts  NativeReactNativeStaticServer.ts  NativeStaticServer.ts  ReactNativeStaticServer.ts  Semaphore.ts  config.ts  constants.ts  index.ts  index.tsx  utils.ts
windows/: ReactNativeStaticServer.sln  cygwin.sh  mingw.sh
windows/ReactNativeStaticServer/: Errors.cpp  Errors.h  NativeReactNativeStaticServerSpec.g.h  ReactNativeModule.cpp  ReactNativeModule.h  ReactNativeStaticServer.h  ReactNativeStaticServer.vcxproj  ReactNativeStaticServer.vcxproj.filters  ReactPackageProvider.cpp  Server.cpp  Server.h  packages.lock.json  pch.h
windows/ReactNativeStaticServer/codegen/: NativeReactNativeStaticServerSpec.g.h
